<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/WhiteGrey"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/startButton"
        android:layout_width="179dp"
        android:layout_height="65dp"
        android:layout_marginBottom="200dp"
        android:background="@color/MilitaryGreen"
        android:contentDescription="@string/app_name"
        android:fontFamily="sans-serif-medium"
        android:text="@string/start"
        android:textColor="@color/WhiteGrey"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/pointsButton"
        android:layout_width="179dp"
        android:layout_height="65dp"
        android:layout_marginBottom="-50dp"
        android:background="@color/DarkGrey"
        android:contentDescription="@string/app_name"
        android:fontFamily="sans-serif-medium"
        android:text="@string/points"
        android:textColor="@color/WhiteGrey"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startButton"
        app:layout_constraintVertical_bias="0.111" />

    <ImageView      
        android:id="@+id/imageView"
        android:layout_width="350dp"
        android:layout_height="364dp"
        android:contentDescription="@string/todo4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.088"
        app:srcCompat="@drawable/hilologo1"/>

    <Button
        android:id="@+id/rulesButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="310dp"
        android:layout_marginEnd="10dp"
        android:text="@string/rules"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
